--- a/theme.scss
+++ b/theme.scss
@@ -4,10 +4,13 @@
 
 
 $title-font:"Yomogi";
-$main-color:#3A5743;
+$main-color:#3A9DC7;
 $font-color:white;
 $light-color:#F4F5FB;
 $main-font:"IBM Plex Sans";
+$navbar-bg: #3597C4;
+$navbar-fg: white;
+
 
 
 .sidebar form {
